prev20/src/prev/phase/synan/PrevParser.java
// Generated from synan/PrevParser.g4 by ANTLR 4.8


	package prev.phase.synan;
	
	import java.util.*;
	
	import prev.common.report.*;
	import prev.phase.lexan.*;

	import prev.data.ast.tree.decl.*;
    import prev.data.ast.tree.expr.*;
    import prev.data.ast.tree.stmt.*;
    import prev.data.ast.tree.type.*;
    import prev.data.ast.tree.*;

	import prev.phase.lexan.LexAn.PrevToken;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PrevParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, CONST_CHAR=2, CONST_STRING=3, CONST_INTEGER=4, CONST_LITERAL=5, 
		KW_BOOLEAN=6, KW_CHAR=7, KW_DEL=8, KW_DO=9, KW_ELSE=10, KW_FUN=11, KW_IF=12, 
		KW_INTEGER=13, KW_NEW=14, KW_THEN=15, KW_TYP=16, KW_VAR=17, KW_VOID=18, 
		KW_WHERE=19, KW_WHILE=20, CONST_BOOLEAN=21, CONST_VOID=22, IDENTIFIER=23, 
		SIM_LPAR=24, SIM_RPAR=25, SIM_LSQLBR=26, SIM_RSQLBR=27, SIM_LSQRBR=28, 
		SIM_RSQRBR=29, SIM_DOT=30, SIM_COM=31, SIM_COL=32, SIM_SCOL=33, SIM_AND=34, 
		SIM_LINE=35, SIM_EKSP=36, SIM_EQU=37, SIM_NEQU=38, SIM_LT=39, SIM_GT=40, 
		SIM_LTEQU=41, SIM_GTEQU=42, SIM_STAR=43, SIM_SLH=44, SIM_PRCNT=45, SIM_PLUS=46, 
		SIM_MINUS=47, SIM_TOP=48, SIM_IS=49, SPACE=50, TAB=51, ERROR=52;
	public static final int
		RULE_source = 0, RULE_source_p = 1, RULE_decl = 2, RULE_decl_p = 3, RULE_decl_args = 4, 
		RULE_type = 5, RULE_type_p = 6, RULE_type_args = 7, RULE_declaration_binder = 8, 
		RULE_declaration_binder_p = 9, RULE_disjunctive = 10, RULE_disjunctive_p = 11, 
		RULE_conjunctive = 12, RULE_conjunctive_p = 13, RULE_relational = 14, 
		RULE_relational_p = 15, RULE_additive = 16, RULE_additive_p = 17, RULE_multiplicative = 18, 
		RULE_multiplicative_p = 19, RULE_prefix = 20, RULE_postfix = 21, RULE_postfix_p = 22, 
		RULE_expr = 23, RULE_expr_p = 24, RULE_expr_pp = 25, RULE_expr_args = 26, 
		RULE_stmnt_args = 27, RULE_stmnt = 28, RULE_stmnt_p = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"source", "source_p", "decl", "decl_p", "decl_args", "type", "type_p", 
			"type_args", "declaration_binder", "declaration_binder_p", "disjunctive", 
			"disjunctive_p", "conjunctive", "conjunctive_p", "relational", "relational_p", 
			"additive", "additive_p", "multiplicative", "multiplicative_p", "prefix", 
			"postfix", "postfix_p", "expr", "expr_p", "expr_pp", "expr_args", "stmnt_args", 
			"stmnt", "stmnt_p"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'nil'", "'boolean'", "'char'", "'del'", 
			"'do'", "'else'", "'fun'", "'if'", "'integer'", "'new'", "'then'", "'typ'", 
			"'var'", "'void'", "'where'", "'while'", null, "'none'", null, "'('", 
			"')'", "'{'", "'}'", "'['", "']'", "'.'", "','", "':'", "';'", "'&'", 
			"'|'", "'!'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'*'", "'/'", 
			"'%'", "'+'", "'-'", "'^'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMMENT", "CONST_CHAR", "CONST_STRING", "CONST_INTEGER", "CONST_LITERAL", 
			"KW_BOOLEAN", "KW_CHAR", "KW_DEL", "KW_DO", "KW_ELSE", "KW_FUN", "KW_IF", 
			"KW_INTEGER", "KW_NEW", "KW_THEN", "KW_TYP", "KW_VAR", "KW_VOID", "KW_WHERE", 
			"KW_WHILE", "CONST_BOOLEAN", "CONST_VOID", "IDENTIFIER", "SIM_LPAR", 
			"SIM_RPAR", "SIM_LSQLBR", "SIM_RSQLBR", "SIM_LSQRBR", "SIM_RSQRBR", "SIM_DOT", 
			"SIM_COM", "SIM_COL", "SIM_SCOL", "SIM_AND", "SIM_LINE", "SIM_EKSP", 
			"SIM_EQU", "SIM_NEQU", "SIM_LT", "SIM_GT", "SIM_LTEQU", "SIM_GTEQU", 
			"SIM_STAR", "SIM_SLH", "SIM_PRCNT", "SIM_PLUS", "SIM_MINUS", "SIM_TOP", 
			"SIM_IS", "SPACE", "TAB", "ERROR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PrevParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PrevParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SourceContext extends ParserRuleContext {
		public AstTrees <AstDecl> ast;
		public DeclContext decl;
		public Source_pContext source_p;
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public Source_pContext source_p() {
			return getRuleContext(Source_pContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PrevParser.EOF, 0); }
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_source);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			((SourceContext)_localctx).decl = decl();
			setState(61);
			((SourceContext)_localctx).source_p = source_p();
			setState(62);
			match(EOF);

					Vector <AstDecl> ds = new Vector <AstDecl>();
					ds.add(((SourceContext)_localctx).decl.ast);
					ds.addAll(((SourceContext)_localctx).source_p.ast);
					((SourceContext)_localctx).ast =  new AstTrees<AstDecl>(ds);
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Source_pContext extends ParserRuleContext {
		public Vector <AstDecl> ast;
		public DeclContext decl;
		public Source_pContext source_p;
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public Source_pContext source_p() {
			return getRuleContext(Source_pContext.class,0);
		}
		public Source_pContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source_p; }
	}

	public final Source_pContext source_p() throws RecognitionException {
		Source_pContext _localctx = new Source_pContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_source_p);
		try {
			setState(70);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KW_FUN:
			case KW_TYP:
			case KW_VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				((Source_pContext)_localctx).decl = decl();
				setState(66);
				((Source_pContext)_localctx).source_p = source_p();

						Vector <AstDecl> ds = new Vector <AstDecl>();
						ds.add(((Source_pContext)_localctx).decl.ast);
						ds.addAll(((Source_pContext)_localctx).source_p.ast);
						((Source_pContext)_localctx).ast =  ds;
					
				}
				break;
			case EOF:
			case SIM_RSQLBR:
				enterOuterAlt(_localctx, 2);
				{

						((Source_pContext)_localctx).ast =  new Vector<AstDecl>();
					
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public AstDecl ast;
		public Token KW_TYP;
		public Token IDENTIFIER;
		public TypeContext type;
		public Token KW_VAR;
		public Token KW_FUN;
		public Decl_pContext decl_p;
		public Declaration_binderContext declaration_binder;
		public TerminalNode KW_TYP() { return getToken(PrevParser.KW_TYP, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PrevParser.IDENTIFIER, 0); }
		public TerminalNode SIM_IS() { return getToken(PrevParser.SIM_IS, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode KW_VAR() { return getToken(PrevParser.KW_VAR, 0); }
		public TerminalNode SIM_COL() { return getToken(PrevParser.SIM_COL, 0); }
		public TerminalNode KW_FUN() { return getToken(PrevParser.KW_FUN, 0); }
		public TerminalNode SIM_LPAR() { return getToken(PrevParser.SIM_LPAR, 0); }
		public Decl_pContext decl_p() {
			return getRuleContext(Decl_pContext.class,0);
		}
		public TerminalNode SIM_RPAR() { return getToken(PrevParser.SIM_RPAR, 0); }
		public Declaration_binderContext declaration_binder() {
			return getRuleContext(Declaration_binderContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_decl);
		try {
			setState(95);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KW_TYP:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				((DeclContext)_localctx).KW_TYP = match(KW_TYP);
				setState(73);
				((DeclContext)_localctx).IDENTIFIER = match(IDENTIFIER);
				setState(74);
				match(SIM_IS);
				setState(75);
				((DeclContext)_localctx).type = type();

						((DeclContext)_localctx).ast =  new AstTypeDecl(new Location((PrevToken)((DeclContext)_localctx).KW_TYP, ((DeclContext)_localctx).type.ast), (((DeclContext)_localctx).IDENTIFIER!=null?((DeclContext)_localctx).IDENTIFIER.getText():null), ((DeclContext)_localctx).type.ast);
					
				}
				break;
			case KW_VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				((DeclContext)_localctx).KW_VAR = match(KW_VAR);
				setState(79);
				((DeclContext)_localctx).IDENTIFIER = match(IDENTIFIER);
				setState(80);
				match(SIM_COL);
				setState(81);
				((DeclContext)_localctx).type = type();

						((DeclContext)_localctx).ast =  new AstVarDecl(new Location((PrevToken)((DeclContext)_localctx).KW_VAR, ((DeclContext)_localctx).type.ast), (((DeclContext)_localctx).IDENTIFIER!=null?((DeclContext)_localctx).IDENTIFIER.getText():null), ((DeclContext)_localctx).type.ast);
					
				}
				break;
			case KW_FUN:
				enterOuterAlt(_localctx, 3);
				{
				setState(84);
				((DeclContext)_localctx).KW_FUN = match(KW_FUN);
				setState(85);
				((DeclContext)_localctx).IDENTIFIER = match(IDENTIFIER);
				setState(86);
				match(SIM_LPAR);
				setState(87);
				((DeclContext)_localctx).decl_p = decl_p();
				setState(88);
				match(SIM_RPAR);
				setState(89);
				match(SIM_COL);
				setState(90);
				((DeclContext)_localctx).type = type();
				setState(91);
				match(SIM_IS);
				setState(92);
				((DeclContext)_localctx).declaration_binder = declaration_binder();

						((DeclContext)_localctx).ast =  new AstFunDecl(new Location((PrevToken)((DeclContext)_localctx).KW_FUN, ((DeclContext)_localctx).declaration_binder.ast), (((DeclContext)_localctx).IDENTIFIER!=null?((DeclContext)_localctx).IDENTIFIER.getText():null), ((DeclContext)_localctx).decl_p.ast, ((DeclContext)_localctx).type.ast, ((DeclContext)_localctx).declaration_binder.ast);
					
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Decl_pContext extends ParserRuleContext {
		public AstTrees <AstParDecl> ast;
		public Token IDENTIFIER;
		public TypeContext type;
		public Decl_argsContext decl_args;
		public TerminalNode IDENTIFIER() { return getToken(PrevParser.IDENTIFIER, 0); }
		public TerminalNode SIM_COL() { return getToken(PrevParser.SIM_COL, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Decl_argsContext decl_args() {
			return getRuleContext(Decl_argsContext.class,0);
		}
		public Decl_pContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl_p; }
	}

	public final Decl_pContext decl_p() throws RecognitionException {
		Decl_pContext _localctx = new Decl_pContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_decl_p);
		try {
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SIM_RPAR:
				enterOuterAlt(_localctx, 1);
				{
